# segfm3d_nora_team

./: .gitignore  README.md  config.yaml  pyproject.toml
cluster/: batch_job.sh  check_ressources.sh  interactive_job.sh
docker/contexts/30_05_final/: predict.py
docker/contexts/30_05_final/src/: method.py  (+1 more)
docker/contexts/docker_context_final/: predict.py
docker/contexts/simple_method_30_05/: Dockerfile  predict.py
docker_context/: Dockerfile  DockerfileOptimized  predict.py
docker_context_final/: DockerfileOptimized  method.py
docker_submission/inputs/: CT_AMOS_amos_0018.npz
docs/: network_sketch.fdb_latexmk  network_sketch.tex  pdflatex2867535.fls
experiments/: 20_05.ipynb  21_05.ipynb  cluster.py  data_exploration.ipynb  eval_old.py  finetuning_preprocessing_analysis.ipynb  old_CustomTrainer.py  presentation_graphs.ipynb  results_analysis.ipynb  sweep_config.yaml  viz.py
experiments/.ipynb_checkpoints/: 21_05-checkpoint.ipynb  results_analysis-checkpoint.ipynb
experiments/memory_optimisation/: failed_eval.py
experiments/nninteractive/: session.ipynb
experiments/sammed3d/: eval_debug.ipynb
experiments/training/: ExpSimpleCopy.ipynb  load_weights.py  load_weights_and_train.py  own_training_pipeline.py  prepare_finetuning_dataset.ipynb  train_nnint.py  train_nninteractive.py
scripts/: CVPR25_iter_eval.py  CVPR25_iter_eval_singularity.py  README.md  eval.py  eval_debug.ipynb  eval_old.py  eval_trained_model.ipynb  gpu_diagnostic.py  nnUnet_training_guide.ipynb  train.py  viz.py  viz_debug.py
scripts/.ipynb_checkpoints/: eval_debug-checkpoint.ipynb  eval_trained_model-checkpoint.ipynb  nnUnet_training_guide-checkpoint.ipynb
scripts/baselines/: eval_sammed3d.py  sammed3d_class.py
scripts/cluster/: batch_job.sh  check_ressources.sh  interactive_job.sh
scripts/docker_submission/: Dockerfile  predict.py
scripts/training/: ExpSimpleCopy.ipynb  ExpSimpleNewDataset.ipynb  load_weights_and_train.py  own_training_pipeline.py
src/: config.py  eval.py  eval_metrics.py  eval_simple.py  eval_tools.py  method.py  nninteractive.py  pred_util.py  sammed3d.py  sammed3d_onnx.py  viz_tools.py
src/methods/: nninteractive.py  nninteractivecore.py  nninteractiveorig.py  simple.py
src/training/: dataloading.py  loss.py  model_wrap.py  nnunetcustomtrainer.py  npzdataset.py  transforms.py  utils.py
(+17 files in other folders)
