[project]
name = "segfm3d-nora-team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "connected-components-3d>=3.23.0",
    "edt>=3.0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "monai>=1.4.0",
    "napari[all]>=0.5.6",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "prefetch-generator>=1.0.3",
    "pytorch-lightning>=2.5.1.post0",
    "scipy>=1.15.2",
    "surface-distance",
    "torchio>=0.20.6",
    "tqdm>=4.67.1",
    "wandb>=0.19.9",
]

[tool.uv.sources]
surface-distance = { git = "https://github.com/deepmind/surface-distance.git" }

[tool.uv]
cache-dir = "../cache"
# The cache directory is used to store the downloaded packages and their dependencies
# avoid having the cache in the home directory, 